jaml/examples/invalid/invalid_escape.jaml
# Invalid escape sequence
test: "invalid \x escape"
